bug: select wrong colors

--- a/TravelPlanner/src/Components/Home/Home.css
+++ b/TravelPlanner/src/Components/Home/Home.css
@@ -67,7 +67,7 @@
     top: 160px;
     z-index: 100;
   }
-
+  
   .searchField {
     border: none;
     border: 1px solid var(--primary);
@@ -75,6 +75,7 @@
     width: 100%;
     border-radius: 5px;
     padding: 0px 5px;
+    background-color: var(--text-box);
 
     color: var(--text);
   }
